      \code{viewport(mask)} that can also be a grob, which defines
      a mask.

      These new features are only supported (so far) on Cairo graphics
      devices and the \code{pdf()} device.

      The graphics engine version, \code{R_GE_version}, has been bumped
      to 13 and so packages that provide graphics devices
      should be reinstalled.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The \emph{standalone} \file{libRmath} math library and \R's C
      API now provide \code{log1pexp()} again as documented, and gains
      \code{log1mexp()}.
    }
  }

  \subsection{LINK-TIME OPTIMIZATION on a UNIX-ALIKE}{
    \itemize{
      \item There is now support for parallelized Link-Time Optimization
      (LTO) with GCC and for \sQuote{thin} LTO with
      \command{clong} \emph{via} setting the \samp{LTO} macro.

      \item There is support of setting a different LTO flag for the
      Fortran compiler, including to empty when mixing \command{clang}
      and \command{gfortran}.  See file \file{config.site}.

      \item Configuring with flag \option{--enable-lto=R} now also uses
      LTO when installing the recommended packages.

      \item \command{R CMD INSTALL} and \command{R CMD SHLIB} have a new
      flag \option{--use-LTO} to use Link-Time Optimization when
      compiling code, for use with \R configured with
      \option{--enable-lto=R}.  For \R configured with
      \option{--enable-lto}, they have the new flag \option{--no-use-LTO}.

      Packages can opt in or out of LTO compilation \emph{via} a
      \samp{UseLTO} field in the \file{DESCRIPTION} file.  (As usual this
      can be overridden by the command-line flags.)
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item Function \code{plclust()} from the package \pkg{stats}, and
      \code{package.dependencies()}, \code{pkgDepends()},
      \code{getDepList()}, \code{installFoundDepends()}, and