@@ -4064,12 +4064,25 @@ g <- function() { on.exit(add=stop('boom'), expr={cat('bar\n'); FALSE}) ; "foo" 
 assertErrV(g())
 ## f() :> "Error in on.exit(....): invalid 'add' argument"  and no error for g() in R <= 4.0.1
 
+
 ## multi-encodings in vector-case for duplicated/match -- PR#17809
 c_latin1 <- "\xe4"
 Encoding(c_latin1) <- "latin1"
 c_utf8 <- enc2utf8(c_latin1)
 x <- list(c_latin1, c_utf8, letters)
 stopifnot(identical(duplicated(x)[2], TRUE))
+## failed in R <= 4.0.1
+
+
+## str(<S4 w/ extra attributes>)
+mixW <- setClass("mixW", contains = "numeric")
+Summ <- setClass("Summ", representation(call = "language", wts = "mixW"))
+S <- Summ(call = quote(foo(x)), wts = structure(mixW(pi), CA="sunny"))
+stopifnot(length(c.str <- capture.output(str(S))) >= 5,
+          grepl(r"(\$ CA: chr "sunny")", c.str[5]))
+deparse(S)# FIXME: is still wrong (no trace of "CA")
+## "CA" was not shown in R <= 4.0.2
+
 
 
 ## keep at end
